--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-# Site settings 配置站点
-title: '廖柯宇的独立博客'
-description: '昵称悟空，千禧一代，前端开发者/伪极客/灵魂摄影师，热爱技术&设计。很高兴能在这里与你分享我对技术和生活的思考。'
-keyword: '廖柯宇, 廖柯宇的独立博客, 廖柯宇的博客, 前端, 前端开发, 前端博客, javascript, vuejs, nodejs, 设计'
-url: 'http://liaokeyu.com' # your host
-baseurl: '/'
+# Site settings
+title: 'Eats and Treats'
+description: "Joey and Jen's food adventures"
+keyword: 'food, dining, dessert, tea, coffee, cooking'
+url: 'https://joeyjiron06.github.io' # your host
+baseurl: '/eats-and-treats'
 
 # Navigation links
 nav:
   home: '/'
   tags: '/tags.html'
 
-# Author 配置博主信息
-author: '廖柯宇'
-nickname: '悟空'
-bio: '前端开发者，热爱技术&设计，简单乐观爱创造'
+# Author
+author: 'Joey and Jen'
+nickname: ''
+bio: ''
 avatar: 'assets/img/profile.png'
 
 # Search
@@ -30,20 +30,20 @@ disqus_url: 'https://liaokeyu.disqus.com/embed.js'
 social-share: true
 social-share-items: ['wechat', 'weibo', 'douban', 'twitter']
 
-# theme color 主题皮肤
+# theme color
 theme-color: 'default'  # pink or default
 
 # Post header background patterns (when the post no cover): circuitBoard, overlappingCircles, food, glamorous, ticTacToe, seaOfClouds
-postPatterns: 'circuitBoard'
+postPatterns: 'food'
 
-# SNS settings 配置社交网站url: weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
+# SNS settings url: weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
 sns:
   weibo: '//weibo.com/lovecolcol'
   juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
   instagram: '//www.instagram.com/steveliaocn'
   github: '//github.com/kaeyleo'
 
-# Tags 设置标签
+# Tags
 recommend-tags: true # whether or not display recommend-tags on the sidebar
 recommend-condition-size: 12 # a tag will be recommended if the size of it is more than this value
 
