--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Joey and Jen's food adventures"
 keyword: 'food, dining, dessert, tea, coffee, cooking'
 url: "https://joeyjiron06.github.io/eats-and-treats"
 baseurl: "/eats-and-treats/"
-
+permalink: /:title/
 
 # Navigation links
 nav:
@@ -17,9 +17,8 @@ nickname: ''
 bio: ''
 avatar: 'assets/img/profile.png'
 
-# Character used to separate site title and description in HTML document title
-# and RSS feed title
-title-separator: "-"
+
+
 
 
 # Search
